[tool.poetry]
name = "nautobot-docker-compose"
version = "0.1.1"
description = ""
authors = ["John Doe <johndoe@mail.com>"]

[tool.poetry.dependencies]
python = "3.11.13"
nautobot = "2.4.10"
ddtrace = "3.8.1"

# nautobot-example-plugin = {path = "plugins/plugin_example", develop = true}


[tool.poetry.dev-dependencies]
invoke = "*"
toml = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
